--- a/Proyecto2GUI/mainBibliotecario.resx
+++ b/Proyecto2GUI/mainBibliotecario.resx
@@ -274,7 +274,7 @@
         hWxRyYEmzoeKeJavVWOyDuXIhZSTtmO4Bgb+BWk8VRSXKTS2AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="BotonGestLibros.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BotonGestUsuarios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
         MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfoCwQHBwMddkTxAAAFyUlEQVRoQ+2ZachtUxiAr3nMGJnn
