--- a/Proyecto2GUI/BiblioBuscarLibro.resx
+++ b/Proyecto2GUI/BiblioBuscarLibro.resx
@@ -118,22 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnBuscarLibro.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfoCwQGKSHC02YOAAACmElEQVRYR+3XOavVQByG8eO+Ilgo
-        VmKnomCniFZ2LoW4fwLFDQUtBEsbC0FRC7UTwQWxUPQbuIGdlYgI7mgnuG/H5wkzYW7OiTfJyWkuvvAD
-        TWYm/5vMyUw6/1M33W53KGqlzwATMLEF45GPO2qSxnZcjAM4g/MtOIYlqFWMhazDA/xEW/mNU5iCcMWS
-        2CDwjjxEzDd8GsBX/IG5ihkIVy2JDYKDiHfkEfZje7Cjpq04jo8wtYpxsjpHjHdkL9JCm/CRv4e5gsrF
-        OOudbMZbvA3ZuSYJfdfjA8xAxfhoQov6sS9aK8bnHlrUj32RFlNrzoz5YpbjCXzPnMBkhBYlsQGGUcxU
-        bMERLAzHQouShEbDKKavfyY0GnvF2CcxDZvgm31ROJYpTWjQdjHOl914he+4Cde+vE3fhJN9i6kiGSOy
-        kD14hxgXTAtairxtT8KJYjEudHmnGixkJ96gGBdhCyp/ZOFgWswXHILvidVYVcJBs3dH4BxxgX2LsniH
-        biHfbClPOJAW40vqBZ7jZQnnwj2sQRxjI17DuPI/hX+YsX0s0vEvYQ5GLaZqfmAf4hhH4V/u47gI71Lc
-        QtzALjzL/tftPkbvizAcKBbjpugubuNOidNIn/8ynIObqvlYi1jMZcyGP3Xvir+0bK1SnnBgEi7A/MJZ
-        LIC3cm4fHs8HS8yEk9h/p5srF8rpGIdZ8HpZnxEJB93pWYDxveDXQTzXVN+dXtGIJCcsYJA98AbMQxyv
-        8bZTg3wdfIbz7CR8VM2KMTZC/G66j6bfTdfhRB24mFiQv5AmX5RuoFbCSVosptpOL8aGBXW/tW2f9k+3
-        nddQvZgYO7RkBdx2+qrwro3+eTuMeFG4Vm3GYVTbdg4j8cJBnEOZ3nQ6fwGqWhb0KuAhRQAAAABJRU5E
-        rkJggg==
+        MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfoCwQGKSHC02YOAAADkUlEQVRYR8XX24tWVRjH8TGVPFV4
+        wjyEFYLiKVTSGwkNhCit/8AKL0TwD1AE0RsVQQTzShRBvQjJA3QnoqJWUBehRCciK0GxVPCYojZ+v5v1
+        bNa8zH7fd79z6AcfhmE/e681a6+91pquOunu7q40KOmt4VYGJL00NBqvYS4WYj6m42X0qO23NDx4CGbg
+        U+zDefyMK/gVX+MQ1sNODkd5f5+SPwgTsRY2eBfN8hCXsAnTUD6no+QPgKNxEHkn/sVvsHNncAE/4R4i
+        j3ESi1E+r3aym9/E53gK8wCn4auwkTcwFc6XBfAVHscdmGc4h0Wo36HspvHYjycw17ARNu78yWtz4+Ar
+        daQiX8KOl3VtJRXb2BrEX2hHbGAEygcquyc3DKvgBDePsAUvoqhpmSiEf4XzwPhqNqCtB0UNXsDHuAHz
+        C95Gy2cUiUJ8gpiwpzAF5fVWyWpfwQH8B+fPZgxFqqyIBckYOFeMn+k6FNfqJO7BStyEcfJPQKqqiAWJ
+        K2u8Ij/f8tOsk7gHPu87mN/xFlJVRSxI5iC+BNcRP+/iWt2k+9w6TsD8jRVIFRWxIHG98C8wLmh+yqmq
+        XrwPTvzDMLfxIVJFRSxI5sGZby7idRTX6ibdNwpfwDh33kOqqIgFiY1/A+M64a5cXKubdN9k+LrNnyhW
+        46axIPFzPALjXuNaUVxrN1GfvIvrMH4Yk5Aqm8QiuPq69/hZm2NwiS+ut5Ooha9oN9zbXGt2wtU5VTaJ
+        RclsfA/jluBWUDxEVYnrmY/wF4w/l6G41jJRCBt2C/AYYH6Ee41LfFnXmPwaXJ9i7rnZ7sVL6PXeXhPF
+        8JN2fXAZN07m1XBO5XWNRsKOx6Q1f+AdlHVtJ7vJjc3zSMRNz63iA3iKc0FzHXFuvIrl2AW/mjzuc9sw
+        FvU6lN8AP0XPIx4DjBPxH3wLD1IuaEfxFTxqxEHMV+P5ODZcv8wd6HOHXHs8j7gYxmtrFifrHiyFIxLH
+        UX/6uwe38vltJb8Bvg4n5VachfPAFdUl/hauwnnia/J1xWR1JByR6JAj1S8jJM8j/rfgyuzS7uf7PpbA
+        c0+Pf1ESG3ZE4pXdx3b0eYQ6ZcOOiB0xrl92qP4IdZq8IdiwHYiztR2zg/VHqNPkDcGG7VCMkK/Oj8MT
+        5sB3xkRDSUzqmEM/YBYGpzMmGkscIUfkMj5DcTbWoCUaTFzBZ2Lw5kxj8oYb/S+p7khX13Ndd15oGdBb
+        twAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
