--- a/Proyecto2GUI/BiblioAgregarUsuario.resx
+++ b/Proyecto2GUI/BiblioAgregarUsuario.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,4 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAgregarUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfoCwQHEAcfmAR+AAAD8ElEQVRYR9WXS6iWVRSGj1lmlhXm
+        tYySEo1qElreimieDXKUoQMvIXgjiIoa2sVBYdEgzLBJEEURRWklODCiJKJRaBSBYqaJJpYOupyeZ7fX
+        f/bZfv/NI0IvPHC+b6+19v73Xmt/6wz8rzQ4ONgToaaxYESqgo2Ca2AmzIapcDHUdoFjV1bvcuQ+VQW5
+        C16Bb+Fn+AX2wVuwGC6F0n4sPANfwUswB1rjfalwvATWg5O30x/gQidA+M2CXyF0GDaA8ZJNTwpj8FgM
+        cAZCv4G78zU4QaltcDno6/H4fBJCxlkHrTm6qjBeCEdB/Q3vwt1g3lwNt8EL8Duov2ANhP9lsAj001+5
+        wx55sumqbDgatkPobXABMR5cBE+DC1HfwCQobfR7B0JbQb88YwdpBNfB96A8+7nQmqCwE3dqLyjz5z4o
+        x0X/yCET/1pIcTpKI7gDjoP6HK6ANFYq3sHLEFoB9bj+e0AZ1/jJpqM0gjshkm8XWKrZYki+yzwHoZQ3
+        If8GS/9TUMY1frboII3A0vQ+UfvBY0tjoXgGy/U9UObOg1Db6O/xqEPgxZlsOkojcFt3g3KCjVAGLzFH
+        joFyIm/n2sYrIpL8MxgHecYO0ijzCERJHoHlkI4rY0XcA947odfASgwbj+dhiEvTBa2ENN5VYQiW5PsQ
+        slI+gKfgMXgDXGToO7gV9HWhD4D2cQ8p410FvS1GhTHMgB3QTS7kXij9foJSHs9NkGx6VjhkpsAm+BH+
+        hNA/4M64Q97GpY9f9C/BY3FRz8I0aNn0pdIx469dAo+DR2UO3Q6tj1+FiewXvbUbwTmpDtKNXnz6UlOA
+        c2HEqgJaEVaHpfg8eOU3sRnWwjwY1mSFynclbVUZmmwvgpdYrzoBb0Irmau4Y8A8mhjv2ioM4Eb4BGpZ
+        PU3UsvG6Huq4doz2Rx/BZN81yoHMeCh7j1Pgs8ewFB5qYDW8CrGLTph2p4htxbkI5SWYGqxGOZBZBnGX
+        GNSrvF3p1jjBFrDkax+fPwblD5wP5XiiXIzJ9yEot/8JONu4UD3egIsQe+OdoFyM7asFYh6lrk/KoNPh
+        B1AH4GYYMuqgsCtwEnPEo3FHXEj0097KX4Bjfmr8uKaLsQx2C8SHzzYy/QPWr/QBqyYm70VPwrAA3inR
+        p7ry1Gr2K33A8vWXm6wei0Q/YwqcBt85fhDuh2EBzudixPI1qU1Wc8SYyoWsAlvPBeAuph6oDFBurc1z
+        b91YJX0aMEmjtN2R1APXlAHcidfBbXs0v/vPYATKcUzo6Is8GnckW1RyIGMJ3gCte2KkynHcGatG+WM9
+        hWxRyYEmzoeKeJavVWOyDuXIhZSTtmO4Bgb+BWk8VRSXKTS2AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
